--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -9,7 +9,7 @@
 .dm_area {
   .not_input_area {
     display: flex;
-    padding-bottom: 4rem;
+    padding-bottom: calc(2rem + 6vh);
     .my_info, .partner_info {
       width: 15vw;
       position: fixed;
@@ -46,62 +46,42 @@
       margin-left: 15vw;
       width: 70vw;
       overflow-y: auto;
+      overflow-x: hidden;
       .date_display {
         width: 80%;
         margin: 15px auto;
         background-color: rgb(70, 70, 70);
         color: white;
+        text-align: center;
         border-radius: 10px;
       }
       .display_left {
-        width: calc((8 / 17) * 100vw + 58.8px);
-        margin: 20px auto;
-        .content {
-          color: white;
-          font-size: calc(1rem + 0.2vw);
-          .one_line {
-            margin-right: auto;
-            width: fit-content;
-            background-color: rgb(206, 24, 121);
-            padding: 7px;
-            border-radius: 10px;
-          }
-          .multiple_lines {
-            overflow-wrap: break-word;
-            width: 95%;
-            margin: 0 auto;
-            padding: 7px;
-          }
-        }
-      }
-      .left_content_background_color {
+        width: calc((8 / 17) * 100vw + 38.8px);
+        padding: 5px 10px;
+        overflow-wrap: break-word;
+        font-size: calc(1rem + 0.2vw);
+        margin-left: 20px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        color: white;
         background-color: rgb(206, 24, 121);
         border-radius: 10px;
       }
       .display_right {
-        width: calc((8 / 17) * 100vw + 58.8px);
-        margin: 20px auto;
-        .content {
-          color: white;
-          font-size: calc(1rem + 0.2vw);
-          .one_line {
-            margin-left: auto;
-            width: fit-content;
-            background-color: rgb(170, 162, 166);
-            padding: 7px;
-            border-radius: 10px;
-          }
-          .multiple_lines {
-            overflow-wrap: break-word;
-            width: 95%;
-            margin: 0 auto;
-            padding: 7px;
-          }
-        }
-      }
-      .right_content_background_color {
+        width: calc((8 / 17) * 100vw + 38.8px);
+        padding: 5px 10px;
+        overflow-wrap: break-word;
+        color: white;
+        font-size: calc(1rem + 0.2vw);
+        margin-left: calc( 70vw - ((8 / 17) * 100vw + 38.8px) - 20px);
+        margin-top: 15px;
+        margin-bottom: 15px;
         background-color: rgb(170, 162, 166);
         border-radius: 10px;
+      }
+      .for_width_check {
+        width: fit-content;
+        font-size: calc(1rem + 0.2vw);
       }
     }
   }
@@ -109,6 +89,35 @@
     position: fixed;
     width: 100vw;
     bottom: 0;
-    background-color: gray;
+    background-color: rgb(216, 110, 10);
+    height: calc(2rem + 4.6vh);
+    .center_form {
+      display: flex;
+      width: fit-content;
+      height: calc(2rem + 1.4vh);
+      margin: calc((4.6vh - 1.4vh) / 2) auto;
+      .input_message_form {
+        width: calc(70vw - 60px);
+        height: 100%;
+        border-top-left-radius: 1.4vh;
+        border-bottom-left-radius: 1.4vh;
+        border-top: 1px solid rgb(216, 110, 10);
+        border-left: 1px solid rgb(216, 110, 10);
+        border-bottom: 1px solid rgb(216, 110, 10);
+        overflow-y: auto;
+        overflow-wrap: break-word;
+      }
+      .message_submit_button {
+        width: 60px;
+        height: 100%;
+        border-top-right-radius: 1.4vh;
+        border-bottom-right-radius: 1.4vh;
+        border-top: 1px solid rgb(216, 110, 10);
+        border-right: 1px solid rgb(216, 110, 10);
+        border-bottom: 1px solid rgb(216, 110, 10);
+        color: white;
+        background-color: rgb(90, 90, 90);
+      }
+    }
   }
 }
