--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -22,7 +22,9 @@
         </div>
       </div>
       <div class="one_selfintrodution">
-        <%= follow.selfintrodution %><%= "e" * 300 %>
+        <% unless follow.selfintrodution.blank? %>
+          <%= safe_join(follow.selfintrodution.split("\n"),tag.br) %>
+        <% end %>
       </div>
     </div>
   <% end %>
