wrote request specs #40

--- a/app/views/users/follower.html.erb
+++ b/app/views/users/follower.html.erb
@@ -17,7 +17,7 @@
           <% end %>
         </div>
         <div class="one_text">
-          <%= link_to follower.name, user_path(follower) %><%= "a" * 100 %>
+          <%= link_to follower.name, user_path(follower) %>
         </div>
       </div>
       <div class="one_selfintrodution">
