--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -18,7 +18,7 @@
           <% end %>
         </div>
         <div class="one_text">
-          <%= link_to follow.name , user_path(follow) %><%= "a" * 100 %>
+          <%= link_to follow.name , user_path(follow) %>
         </div>
       </div>
       <div class="one_selfintrodution">
