--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,13 +10,14 @@
         <%= f.text_field :content, class: "search_input" %>
         <%= f.submit '検索', class: "button_size btn btn-primary" %>
       </div>
+      <div class="necessary_space"></div>
       <div class="flex_container">
         <div class="condition">文章の正確さ</div>
         <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
         <% evaluations = [1,2,3,4,5] %>
         <div class="checkbox">
           <% evaluations.each do |eva| %>
-            <%= f.check_box :accuracy_select, { multiple: true, class: "space" }, eva, nil %>
+            <%= f.check_box :accuracy_select, { multiple: true, class: "space", :checked => true }, eva, nil %>
             <span class="letter_white">
               <%= eva %>
             </span>
@@ -27,7 +28,7 @@
         <div class="condition add_margin_right_27">文章難易度</div>
         <div class="checkbox">
           <% evaluations.each do |eva| %>
-            <%= f.check_box :difficulty_select, { multiple: true, class: "space" }, eva, nil %>
+            <%= f.check_box :difficulty_select, { multiple: true, class: "space", :checked => true }, eva, nil %>
             <span class="letter_white">
               <%= eva %>
             </span>
@@ -41,7 +42,7 @@
         </div>
         <div class="checkbox">
             <% select_solve.each do |s| %>
-              <%= f.check_box :solve, { multiple: true, class: "space" }, s, nil %>
+              <%= f.check_box :solve, { multiple: true, class: "space", :checked => true }, s, nil %>
               <% if s %>
                 <span class="letter_white">
                   <%= "解決" %>
@@ -57,11 +58,11 @@
       <div class="flex_container">
         <div class="condition">期日</div>
         <div class="input_term">
-            <%= f.date_field :term_from %>
+            <%= f.date_field :term_from, value: "2022-01-01".to_date %>
             <span class="letter_white">
               ~
             </span>
-            <%= f.date_field :term_to %>
+            <%= f.date_field :term_to, value: Time.zone.now.to_date %>
         </div>
       </div>
     <% end %>
@@ -119,3 +120,4 @@
     <strong>まだ作成されていません</strong>
   <% end %>
 </div>
+<%= javascript_pack_tag 'incremental_search', 'data-turbolinks-track': 'reload' %>
