--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -118,7 +118,7 @@
           <div><%= hidden_field_tag :model, "Question" %></div>
           <%= hidden_field_tag :use_form, "true" %>
           <div class="search">
-            <%= f.text_field :content, class: "search_input" %>
+            <%= f.text_field :content, placeholder: "質問タイトルの検索", class: "search_input" %>
             <%= f.submit '検索', class: "button_size btn btn-primary" %>
           </div>
           <div class="necessary_space"></div>
