try to deploy as intended

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -257,5 +257,6 @@
     </div>
   </div>
 </div>
+<%= javascript_pack_tag 'judgement_notPC.js', 'data-turbolinks-track': 'reload' %>
 <% end %>
 <%= javascript_pack_tag 'incremental_search', 'data-turbolinks-track': 'reload' %>
