created a testuser(for test login) #46

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -251,7 +251,7 @@
     <div class="link_line_design">
     </div>
     <div class="test_login_link">
-      <%= link_to "Test login", '#' %>
+      <%= link_to "Test login", testlogin_path %>
     </div>
     <div class="link_line_design">
     </div>
