--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,7 +19,7 @@
     .heading {
       width: 100%;
       overflow-wrap: break-word;
-      color: red;
+      color: white;
       font-size: calc( 40px + 2vw );
       font-weight: bold;
       margin-bottom: 50px;
