--- a/app/views/questions/browsing.html.erb
+++ b/app/views/questions/browsing.html.erb
@@ -17,7 +17,7 @@
         </div>
       <% end %>
       <div class="name">
-        <%= @question.user.name %><%= "a" * 100 %>
+        <%= @question.user.name %>
       </div>
     </div>
     <div class="date">
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="title">
-      <%= @question.title %><%= "a" * 100 %>
+      <%= @question.title %>
     </div>
   </div>
   <div class="distinction_line">
