--- a/app/views/users/bookmark.html.erb
+++ b/app/views/users/bookmark.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "bookmark") %>
+<% provide(:title, "Article bookmark") %>
 
 <div class="sum_question_article">
   <div>Article bookmark count / <%= @user.sum_articlebookmark_per_user.count %></div>
