--- a/app/views/users/questionbookmark.html.erb
+++ b/app/views/users/questionbookmark.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "question bookmark") %>
+<% provide(:title, "Question bookmark") %>
 
 <div class="sum_question_article">
   <div>Question bookmark count / <%= @user.sum_questionbookmark_per_user.count %></div>
