--- a/app/views/articles/browsing.html.erb
+++ b/app/views/articles/browsing.html.erb
@@ -17,7 +17,7 @@
         </div>
       <% end %>
       <div class="name">
-        <%= @article.user.name %><%= "a" * 100 %>
+        <%= @article.user.name %>
       </div>
     </div>
     <div class="date">
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="title">
-      <%= @article.title %><%= "a" * 100 %>
+      <%= @article.title %>
     </div>
   </div>
   <div class="distinction_line">
