--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Create an Article")%>
+<% provide(:title, "Create an Question")%>
 
 <%= form_with(model: @question, local: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
