<production ECS> we can see flash message at root_page #46

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -11,6 +11,13 @@
   position: fixed;
   top: 4rem;
   overflow-y: auto;
+  .for_root_page {
+    position: absolute;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    top: 5rem;
+  }
   .heading_and_links {
     display: flex;
     flex-direction: column;
