--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -234,6 +234,11 @@
   <% end %>
 <% else %>
 <div class="image_display">
+  <div class="for_root_page">
+    <% flash.each do |message_type,message| %>
+      <div class="alert alert-<%= message_type %>" role="alert"><%= message %></div>
+    <% end %> 
+  </div>
   <div class="heading_and_links">
     <div class="heading">
       Understand
