--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -14,9 +14,8 @@
   .for_root_page {
     position: absolute;
     width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    top: 5rem;
+    top: 2rem;
+    right: 5%;
   }
   .heading_and_links {
     display: flex;
