--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,41 +10,7 @@
         <%= f.text_field :content, placeholder: "記事タイトルの検索", class: "search_input" %>
         <%= f.submit '検索', class: "button_size btn btn-primary" %>
       </div>
-      <div class="necessary_space"></div>
-      <div class="flex_container">
-        <div class="condition">文章の正確さ</div>
-        <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
-        <% evaluations = [1,2,3,4,5] %>
-        <div class="checkbox">
-          <% evaluations.each do |eva| %>
-            <%= f.check_box :accuracy_select, { multiple: true, class: "space", :checked => true }, eva, nil %>
-            <span class="letter_white">
-              <%= eva %>
-            </span>
-          <% end %>
-        </div>
-      </div>
-      <div class="flex_container">
-        <div class="condition add_margin_right_27">文章難易度</div>
-        <div class="checkbox">
-          <% evaluations.each do |eva| %>
-            <%= f.check_box :difficulty_select, { multiple: true, class: "space", :checked => true }, eva, nil %>
-            <span class="letter_white">
-              <%= eva %>
-            </span>
-          <% end %>
-        </div> 
-      </div>
-      <div class="flex_container">
-        <div class="condition">期日</div>
-        <div class="input_term">
-            <%= f.date_field :term_from, value: "2022-01-01".to_date %>
-            <span class="letter_white">
-              ~
-            </span>
-            <%= f.date_field :term_to, value: Time.zone.now.to_date %>
-        </div>
-      </div>
+      <%= render partial: 'shared/search_form_common', locals: { f: f, question_article: "article" } %>
     <% end %>
   </div>
 </div>
