<develop env>refactoring/article or question list #48

--- a/app/views/shared/_search_form_common.html.erb
+++ b/app/views/shared/_search_form_common.html.erb
@@ -23,7 +23,7 @@
     <% end %>
   </div>
 </div>
-<% if question_article == "question" %>
+<% if question_or_article == "question" %>
 <%= render partial: 'shared/searchform_solve_or_not', locals: { f: f } %>
 <% end %>
 <div class="flex_container">
