--- a/app/views/users/bookmark.html.erb
+++ b/app/views/users/bookmark.html.erb
@@ -37,6 +37,6 @@
       <%== pagy_bootstrap_nav(@pagy) %>
     </div>
   <% else %>
-    <strong>まだniceボタンを押していません</strong>
+    <strong>記事のブックマークボタンを押していません</strong>
   <% end %>
 </div>
