--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,7 +10,7 @@
         <%= f.text_field :content, placeholder: "質問タイトルの検索", class: "search_input" %>
         <%= f.submit '検索', class: "button_size btn btn-primary" %>
       </div>
-      <%= render partial: 'shared/search_form_common', locals: { f: f, question_article: "question" } %>
+      <%= render partial: 'shared/search_form_common', locals: { f: f, question_or_article: "question" } %>
     <% end %>
   </div>
 </div>
@@ -24,41 +24,7 @@
 </div>
 <div class="personal_question_article_list">
   <% if @user.questions.any? %>
-    <% @questions.each do |question| %>
-      <div class="an_item">
-        <div class="content">
-          <div class="title">
-            <%= link_to question.title, browsing_question_path(question) %>
-          </div>
-          <div class="flex">
-            <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= question.accuracy_text %></div>
-            <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= question.difficultylevel_text %></div>
-            <div>最終修正日&thinsp;/&thinsp;<%= ApplicationRecord.date_expression_change(question.updated_at) %></div>
-          </div>
-          <div class="flex">
-            <div class="flex_item_adjustment">小学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(question.Eschool_level) %></div>
-            <div class="flex_item_adjustment">中学生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(question.JHschool_level) %></div>
-            <div>高校生向け&thinsp;:&thinsp;<%= ApplicationRecord.inspect_level(question.Hschool_level) %></div>
-          </div>
-          <% if question.solve %>
-            <div class="solve_question">
-              解決
-            </div>
-          <% else %>
-            <div class="not_solve_question">
-              未解決
-            </div>
-          <% end %>
-          <% if current_user?(question.user) %>
-            <div>
-              <%= link_to "削除", question, method: :delete, data: { confirm: "削除しますか?" } %>
-              &ensp;&ensp;<%= link_to "編集", edit_question_path(question) %>
-            </div>
-          <% end %>
-        </div>
-      </div>
-      <div class="distinction_line"></div>
-    <% end %>
+    <%= render partial: 'shared/article_question_list', locals: { article_or_question_collection: @questions } %>
     <div class="pagenation">
       <%== pagy_bootstrap_nav(@pagy) %>
     </div>
