--- a/app/views/users/bookmark.html.erb
+++ b/app/views/users/bookmark.html.erb
@@ -5,34 +5,7 @@
 </div>
 <div class="personal_question_article_list">
   <% if @user.sum_articlebookmark_per_user.any? %>
-    <% @bookmarks.each do |bookmark| %>
-      <div class="an_item">
-        <div class="content">
-          <div class="title">
-            <%= link_to bookmark.title, browsing_article_path(bookmark) %>
-          </div>
-          <div class="flex">
-            <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= bookmark.accuracy_text %></div>
-            <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= bookmark.difficultylevel_text %></div>
-            <div>最終修正日&thinsp;/&thinsp;<%= ApplicationRecord.date_expression_change(bookmark.updated_at) %></div>
-          </div>
-          <div class="flex">
-            <div class="flex_item_adjustment">小学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(bookmark.Eschool_level) %></div>
-            <div class="flex_item_adjustment">中学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(bookmark.JHschool_level) %></div>
-            <div>高校生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(bookmark.Hschool_level) %></div>
-          </div>
-          <div class="separation"></div>
-          <div>
-            <%= form_with(model: current_user.article_bookmarks.find_by(article_id: bookmark.id),
-              html: {method: :delete }, local: true) do |f| %>
-              <div><%= hidden_field_tag :not_ajax, true %></div>
-              <%= f.submit "ブックマーク取り消し", class: "delete_button_design" %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-      <div class="distinction_line"></div>
-    <% end %>
+    <%= render partial: "shared/recorded_article_question_list_outline", locals: { one_type_instance_collection: @bookmarks, type: "articlebookmark" } %>
     <div class="pagenation">
       <%== pagy_bootstrap_nav(@pagy) %>
     </div>
