--- a/app/views/users/nice.html.erb
+++ b/app/views/users/nice.html.erb
@@ -5,33 +5,7 @@
 </div>
 <div class="personal_question_article_list">
   <% if @user.sum_nice_per_user.any? %>
-    <% @nices.each do |nice| %>
-      <div class="an_item">
-        <div class="content">
-          <div class="title">
-            <%= link_to nice.title, browsing_article_path(nice) %>
-          </div>
-          <div class="flex">
-            <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= nice.accuracy_text %></div>
-            <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= nice.difficultylevel_text %></div>
-            <div>最終修正日&thinsp;/&thinsp;<%= ApplicationRecord.date_expression_change(nice.updated_at) %></div>
-          </div>
-          <div class="flex">
-            <div class="flex_item_adjustment">小学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(nice.Eschool_level) %></div>
-            <div class="flex_item_adjustment">中学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(nice.JHschool_level) %></div>
-            <div>高校生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(nice.Hschool_level) %></div>
-          </div>
-          <div>
-            <%= form_with(model: current_user.nice_to_articles.find_by(article_id: nice.id),
-              html: {method: :delete }, local: true) do |f| %>
-              <div><%= hidden_field_tag :not_ajax, true %></div>
-              <%= f.submit "nice取り消し", class: "delete_button_design" %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-      <div class="distinction_line"></div>
-    <% end %>
+    <%= render partial: "shared/recorded_article_question_list_outline", locals: { one_type_instance_collection: @nices, type: "nice" } %>
     <div class="pagenation">
       <%== pagy_bootstrap_nav(@pagy) %>
     </div>
