--- a/app/views/users/questionbookmark.html.erb
+++ b/app/views/users/questionbookmark.html.erb
@@ -5,34 +5,7 @@
 </div>
 <div class="personal_question_article_list">
   <% if @user.sum_questionbookmark_per_user.any? %>
-    <% @questionbookmarks.each do |qb| %>
-      <div class="an_item">
-        <div class="content">
-          <div class="title">
-            <%= link_to qb.title, browsing_question_path(qb) %>
-          </div>
-          <div class="flex">
-            <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= qb.accuracy_text %></div>
-            <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= qb.difficultylevel_text %></div>
-            <div>最終修正日&thinsp;/&thinsp;<%= ApplicationRecord.date_expression_change(qb.updated_at) %></div>
-          </div>
-          <div class="flex">
-            <div class="flex_item_adjustment">小学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(qb.Eschool_level) %></div>
-            <div class="flex_item_adjustment">中学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(qb.JHschool_level) %></div>
-            <div>高校生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(qb.Hschool_level) %></div>
-          </div>
-          <div class="separation"></div>
-          <div>
-            <%= form_with(model: current_user.question_bookmarks.find_by(question_id: qb.id),
-              html: {method: :delete }, local: true) do |f| %>
-              <div><%= hidden_field_tag :not_ajax, true %></div>
-              <%= f.submit "ブックマーク取り消し", class: "delete_button_design" %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-      <div class="distinction_line"></div>
-    <% end %>
+    <%= render partial: "shared/recorded_article_question_list_outline", locals: { one_type_instance_collection: @questionbookmarks, type: "questionbookmark" } %>
     <div class="pagenation">
       <%== pagy_bootstrap_nav(@pagy) %>
     </div>
