--- a/app/views/users/follower.html.erb
+++ b/app/views/users/follower.html.erb
@@ -1,32 +1,7 @@
 <% provide(:title, "follow")%>
 <div class="page_content"><%= @user.name %>さんのフォロワー</div>
-
+  <%= render partial: 'shared/follow_follower_page', locals: { followers_or_follows: @followers } %>
 <% if @user.followers.any? %>
-  <% @followers.each do |follower| %>
-    <div class="follow_follower_display">
-      <div class="top_part">
-        <div class="one_avatar">
-          <% if follower.avatar? %>
-            <a href="<%= user_path(follower) %>">
-              <%= image_tag follower.avatar.thumb_mid.url , class: "avatar" %>
-            </a>
-          <% else %>
-            <a href="<%= user_path(follower) %>">
-              <%= render 'shared/default_avatar' %>
-            </a>
-          <% end %>
-        </div>
-        <div class="one_text">
-          <%= link_to follower.name, user_path(follower) %>
-        </div>
-      </div>
-      <div class="one_selfintrodution">
-        <% unless follower.selfintrodution.blank? %>
-          <%= safe_join(follower.selfintrodution.split("\n"),tag.br) %>
-        <% end %>
-      </div>
-    </div>
-  <% end %>
     <div class="pagy_position">
       <%== pagy_bootstrap_nav(@pagy) %>
     </div>
