--- a/app/assets/stylesheets/article_question.scss
+++ b/app/assets/stylesheets/article_question.scss
@@ -333,7 +333,7 @@
         display:  flex;
         width: 90%;
         margin: 5px auto;
-        .commenter_avatar {
+        .comment_avatar {
           width: 50px;
           height: 50px;
           margin-right: 10px;
