<production ECS>refactoring/edit_article_question

--- a/app/views/shared/_search_form_common.html.erb
+++ b/app/views/shared/_search_form_common.html.erb
@@ -1,6 +1,6 @@
 <div class="necessary_space"></div>
 <div class="flex_container">
-  <div class="condition">文章の正確さ</div>
+  <div class="condition">文章の正しさ</div>
   <% #url:https://apidock.com/rails/ActionView/Helpers/FormHelper/check_box %>
   <% evaluations = [1,2,3,4,5] %>
   <div class="checkbox">
