--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,7 @@
           <div><%= hidden_field_tag :use_form, "true" %></div>
           <div><%= hidden_field_tag :model, "Article" %></div>
           <div class="search">
-            <%= f.text_field :content, placeholder: "記事タイトルの検索", class: "search_input" %>
+            <%= f.text_field :content, placeholder: "記事タイトルの検索  例:数学 関数", class: "search_input" %>
             <%= f.submit '検索', class: "button_size btn btn-primary" %>
           </div>
           <%= render partial: 'shared/search_form_common', locals: { f: f, question_or_article: "article" } %>
@@ -59,7 +59,7 @@
           <div><%= hidden_field_tag :model, "Question" %></div>
           <%= hidden_field_tag :use_form, "true" %>
           <div class="search">
-            <%= f.text_field :content, placeholder: "質問タイトルの検索", class: "search_input" %>
+            <%= f.text_field :content, placeholder: "質問タイトルの検索  例: 高校 古文", class: "search_input" %>
             <%= f.submit '検索', class: "button_size btn btn-primary" %>
           </div>
           <%= render partial: 'shared/search_form_common', locals: { f: f, question_or_article: "question" } %>
