<production ECS>wrote the css code of talk partner's name

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -56,7 +56,7 @@
             <div>
               <%= image_tag entry.user.avatar.thumb_mid.url , class: "avatar" %>
             </div>
-            <div>
+            <div class="name_area">
               <%= entry.user.name %>
             </div>
           <% else %>
