<develop env>Yeah! I set up React environment #50

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <% end %> 
       </div>
       <%= yield %>
-      <div>
+      <div class="for_react_spa">
       <% # debug(params) if Rails.env.development? %>
       </div>
       <div class="container-fluid">
