--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,27 @@
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
-    <div class="z-index_minlevel">
-      <div class="message_container">
-        <% flash.each do |message_type,message| %>
-          <div class="alert alert-<%= message_type %>" role="alert"><%= message %></div>
-        <% end %> 
+    <% if request.fullpath != "/spa/frontend/helloworld" %>
+      <%= render 'layouts/header' %>
+      <div class="z-index_minlevel">
+        <div class="message_container">
+          <% flash.each do |message_type,message| %>
+            <div class="alert alert-<%= message_type %>" role="alert"><%= message %></div>
+          <% end %> 
+        </div>
+        <%= yield %>
+        <div>
+        <% # debug(params) if Rails.env.development? %>
+        </div>
+        <div class="container-fluid">
+          <%= render 'layouts/footer' %>
+        </div>
       </div>
-      <%= yield %>
+    <% else %>
       <div class="for_react_spa">
-      <% # debug(params) if Rails.env.development? %>
+        <%= yield %>
       </div>
-      <div class="container-fluid">
-        <%= render 'layouts/footer' %>
-      </div>
-    </div>
+    <% end %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <%# URL: https://qiita.com/TMTN/items/0a8879971d7cdf74b938#%E3%81%BE%E3%81%A8%E3%82%81%>
     <script type="text/javascript">
